# Copyright (c) 2014-present, Facebook, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.

add_subdirectory("config")
add_subdirectory("database")
add_subdirectory("distributed")
add_subdirectory("killswitch")
add_subdirectory("logger")
add_subdirectory("numeric_monitoring")
add_subdirectory("remote/enroll")
