# Copyright (c) 2014-present, The osquery authors
#
# This source code is licensed as defined by the LICENSE file found in the
# root directory of this source tree.
#
# SPDX-License-Identifier: (Apache-2.0 OR GPL-2.0-only)

add_subdirectory("config")
add_subdirectory("database")
add_subdirectory("distributed")
add_subdirectory("logger")
add_subdirectory("numeric_monitoring")
add_subdirectory("remote/enroll")
